# SWAN-Game-Engine

./: .clang  .clang-format  .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  Config.xml  Doxyfile  README.md  Readme.md
CMakeModules/: FindSDL2.cmake  Findassimp(1).cmake
Demos/: CMakeLists.txt  SWAN-Cubes-Demo.cpp  SWAN-GUI-Demo-2.cpp  SWAN-GUI-Demo.cpp  SWAN-Pong-Demo.cpp  SWAN-Text-Demo.cpp  SWAN-Unnamed-Demo.cpp  SWAN-VoxelEditorDemo.cpp
Demos/FPS/: AssimpImport.hpp  Main.cpp
Demos/FPS/Resources/: res.xml
Demos/FPS/Resources/Meshes/: Place.mtl  SPAS-12.mtl  Scene.blend1
Demos/FPS/Resources/Shaders/: GUIShader.frag  GUIShader.vert  Text.vert
Dependencies/include/glad/: glad.h
FPS/: .clang  ActualMain.cpp  AssimpImport.hpp  Button.hpp  CMakeLists.txt  EditorState.hpp  ExitState.hpp  GameState.hpp  Main.cpp  MenuState.cpp  MenuState.hpp  Physics.hpp  PhysicsObject.hpp  Scene.hpp  SettingsState.cpp  SettingsState.hpp  Slider.hpp  State.hpp  TheGame.md
FPS/Resources/: Scene.dae  res.xml
FPS/Resources/Fonts/: Font.toml  Terminus.toml
FPS/Resources/Meshes/: Enemy_WalkAnim_2.mtl  Scene.blend  Scene.blend1
FPS/Resources/Shaders/: Fog.frag  Fog.vert  Lighting.vert  NoLighting.vert  Text.frag  Text.vert
NewBuild/: CMakeCache.txt  Makefile  Resources  cmake_install.cmake
NewBuild/Demos/: Makefile  cmake_install.cmake
NewBuild/FPS/: Makefile  cmake_install.cmake
NewBuild/SWAN/: CMakeConfig.h  Makefile  cmake_install.cmake
Notes/: CodingConventions.md  CommonRenderingErrors.txt  General-Notes.md  Planned-Features.txt  Shader-Rewrite.md  ThreeStages.txt
Resources/: Font.ini  Font.toml  Font2.ini  Font2.toml  Terminus.ini  minires.xml  res.xml  scene.xml
Resources/Meshes/: Monkey.mtl  SPAS-12.mtl
Resources/Pong/: Buttons.xcf  Title.xcf  res.xml
Resources/Shaders/: GUIShader.frag  GUIShader.vert  Physics.frag  Physics.vert  SplashScreen.frag  basic.frag  basic.vert  proper.frag  shaded.frag  shaded.vert  text.frag  text.vert
SWAN/: CMakeConfig.h.in  CMakeLists.txt  mainpage.md
SWAN/Core/: Buffer.cpp  Buffer.hpp  Defs.hpp  Display.cpp  Display.hpp  EventListener.hpp  Format.hpp  Input.cpp  Input.hpp  Logging.cpp  Logging.hpp  Resources.cpp  Resources.hpp
SWAN/GUI/: Button.hpp  GUIManager.cpp  GUIManager.hpp  IGUIElement.hpp  List.hpp  Rect2D.hpp  Renderer.cpp  TextBox.hpp  VisualDebugger.hpp
SWAN/Importing/: INI.cpp  INI.hpp  XML.cpp  XML.hpp
SWAN/Input/: Event.cpp  Event.hpp  FlatInputRep.cpp  FlatInputRep.hpp  HandlingInput.md  InputFrame.cpp  InputFrame.hpp  KeyEvent.cpp  KeyEvent.hpp  MouseEvent.cpp  MouseEvent.hpp  WindowEvent.hpp
SWAN/Logic/: Entity.hpp
SWAN/Maths/: Matrix.cpp  Matrix.hpp  TODO.txt  Vector.hpp  vtest.cpp
SWAN/OpenAL/: Buffer.hpp  Context.hpp  Debugging.hpp  Device.hpp  Listener.hpp  SoundSystem.hpp  Source.hpp
SWAN/OpenGL/: Framebuffer.cpp  Framebuffer.hpp  OnGLInit.cpp  OnGLInit.hpp  VAO.cpp  VAO.hpp
SWAN/Physics/: AABB.cpp  AABB.hpp  Basic.cpp  Basic.hpp  BoundingSphere.cpp  BoundingSphere.hpp  CheckCollision.cpp  CheckCollision.hpp  ColWrapper.cpp  ColWrapper.hpp  Collision.hpp  Transform.hpp  TriangleMesh.cpp  TriangleMesh.hpp
SWAN/Rendering/: BitmapFont.cpp  BitmapFont.hpp  Camera.hpp  DebugRender.cpp  DebugRender.hpp  IFont.hpp  Image.cpp  Image.hpp  Light.hpp  Mesh.cpp  Mesh.hpp  OBJ-Import.cpp  OBJ-Import.hpp  Renderer.cpp  Renderer.hpp  SWAN-Scene.hpp  Shader.cpp  Shader.hpp  SpriteSheet.cpp  SpriteSheet.hpp  Text.cpp  Text.hpp  Texture.cpp  Texture.hpp
SWAN/Utility/: All.hpp  AngleUnits.hpp  CircularBuffer.hpp  Collect.hpp  CxArray.hpp  Debug.hpp  Either.hpp  FindEx.hpp  Group.hpp  INI.cpp  INI.hpp  Math.hpp  NotNull.hpp  Octree.cpp  Octree.hpp  OnExit.hpp  OnScopeExit.hpp  PointerOrObject.hpp  Profile.hpp  StreamOps.hpp  StringUtil.cpp  StringUtil.hpp  UTF-8.cpp  UTF-8.hpp  UTF8.hpp  XML.cpp  XML.hpp
Scripts/: Git-Prepare-Commit.sh
Source/: .Main.cpp.swp  CMakeConfig.h.in  Main.cpp  OldMain.cpp
Source/Core/: Console.hpp  Display.cpp  Display.hpp  EventListener.hpp  EventManager.hpp  Input.cpp  Input.hpp  ResourceManager.hpp  Resources.cpp  Resources.hpp  Scene.hpp
Source/GUI/: Element.cpp  Element.hpp  GUI.cpp  GUI.hpp  GUIElement.cpp  GUIElement.hpp  GUIPrim.cpp  GUIPrim.hpp  GUIRenderer.cpp  GUIRenderer.hpp  IComponent.hpp  Image.hpp  ImageComp.hpp  Interface.hpp  Renderer.cpp  Renderer.hpp
Source/GUI/Old/: Clickable.hpp  Draggable.hpp  GUI.cpp  GUI.hpp  Renderer.hpp
Source/Logic/: Entity.hpp
Source/OpenGL/: VAO.cpp  VAO.hpp
Source/Physics/: AABB.cpp  AABB.hpp  BoundingSphere.cpp  BoundingSphere.hpp  CheckCollision.cpp  CheckCollision.hpp  ColWrapper.cpp  ColWrapper.hpp  Collision.hpp  Transform.hpp
Source/Rendering/: .BitmapFont.cpp.swp  .BitmapFont.hpp.swp  .Text.cpp.swp  .Text.hpp.swp  BitmapFont.cpp  BitmapFont.hpp  Camera.hpp  Image.cpp  Image.hpp  Light.hpp  Mesh.cpp  Mesh.hpp  OBJ-Import.cpp  OBJ-Import.hpp  Shader.cpp  Shader.hpp  SplashScreen.hpp  Text.cpp  Text.hpp  Texture.cpp  Texture.hpp
Source/Rendering/Scene/: Scene.hpp
Source/Utility/: All.hpp  AngleUnits.hpp  Collect.hpp  Debug.hpp  Distance.hpp  Either.hpp  FindNext.hpp  Group.hpp  Math.hpp  NotNull.hpp  Octree.cpp  Octree.hpp  OnExit.hpp  OnScopeExit.hpp  Profile.hpp  Ratio.hpp  StreamOps.hpp  StringUtil.cpp  StringUtil.hpp  ToString.hpp  ToVector.hpp  XML.cpp  XML.hpp
Source/Utility/GLSLTokenizer/: GLSLTokenizer.hpp
Tools/: CMakeLists.txt  GenBuiltinFont.cpp  ImageToHpp.cpp  ShaderReader.cpp
